# PickupWinder

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  docker-build.sh  fix_canstart.py  fix_diag.py  fix_file.py  fix_fsm.py  fix_immediate.py  fix_src.py  fix_src2.py  fix_src3.py  fix_types.py  fix_verify_pause.py  platformio.ini
.github/: copilot-instructions.md
.github/workflows/: build.yml  platformio-build.yml  toolchain-image.yml
archive/data/: index.html
archive/include/: CommandHandler.h  Protocol.h  README  Secrets.h  SessionController.h  Telemetry.h  WifiManager.h
archive/src/: CommandController.cpp  Diag.cpp  NvsCompat.cpp  WebInterface.cpp  WinderApp.Commands.cpp  WinderApp.Core.cpp  WinderApp.Telemetry.cpp  WindingPattern.cpp
cad/kicad/BBB_Cape/: BBB_Winder.kicad_pcb  BBB_Winder.kicad_prl  BBB_Winder.kicad_pro  BBB_Winder.kicad_sch
cad/kicad/DriverBoard/: DriverBoard.kicad_pcb  DriverBoard.kicad_prl  DriverBoard.kicad_pro  DriverBoard.kicad_sch
cad/kicad/MainBoard/: MainBoard.kicad_prl  MainBoard.kicad_pro  MainBoard.kicad_sch
data/: index.html  script.js  style.css
doc/: beaglebone_architecture.md  beaglebone_eqep.md  benchmark_control_loop.md  command_controller_sequence.md  review_checklist_realtime_heap.md  synchronization_sequence.md
docker/: README.md  build.sh
docker-local-backup/: Dockerfile
docs/pinouts/: README.md
include/: AppConfig.h  CommandController.h  CommandRegistry.h  Config.h  ControlHardware.h  Diag.h  LEDController.h  LateralController.h  LinkSerial.h  MotorTest.h  NvsCompat.h  SessionController.h  SpeedInput.h  StepperController.h  StepperMusic.h  Types.h  WebInterface.h  WifiConfig.h  WifiManager.h  WinderApp.h  WindingGeometry.h  WindingPattern.h  WindingRecipeStore.h  WindingSimulator.h
port/beaglebone/linux/python/: README.md
resources/eqep/: bone_eqep0.dts  bone_eqep2.dts  check_eqep_env.sh
resources/esp32/include/: ControlHardware.h  Diag.h  WindingRecipeStore.h
resources/esp32/src/: CommandRegistry.cpp  SessionController.cpp  WifiManager.cpp  WinderApp.Recipe.cpp
resources/esp32/test/test_command_registry/: test_main.cpp
scripts/: deploy.sh  fetch_fastaccelstepper.sh  test_motor.py  test_pru0_motor.sh
scripts/pru/: deploy.sh  install.sh  load_pru.sh  pickupwinder-daemon.service  pickupwinder-pru.service
src/: CommandController.cpp  CommandRegistry.cpp  ControlHardware.cpp  Diag.cpp  LEDController.cpp  LateralController.cpp  LinkSerial.cpp  MotorTest.cpp  NvsCompat.cpp  SessionController.cpp  SpeedInput.cpp  StepperController.cpp  WebInterface.cpp  WifiManager.cpp  WinderApp.Commands.cpp  WinderApp.GeometryPattern.cpp  WinderApp.cpp  WindingPattern.cpp  WindingRecipeStore.cpp  WindingSimulator.cpp  main.cpp
src/dts/: 00-gpio.dts  00-pru-steppers-endstops.dts  01-eqep.dts  02-host_IO.dts  README.md
src/linux/: CMakeLists.txt
src/linux/daemon/: Makefile  pickup-winder.service  pickup_daemon.c
src/linux/include/: IpcChannel.h  LateralPRU.h  MoveQueue.h  StepperPRU.h  TmcUart.h
src/linux/src/: IpcChannel.cpp  LateralPRU.cpp  MoveQueue.cpp  StepperPRU.cpp  TmcUart.cpp  pru_fw_test.cpp  tmc_uart_example.cpp
src/pru/: AM335x_PRU.cmd  Makefile  PRU_DEPLOY.md  README.md  list_pru_pins.sh  test_pru0_motor.sh  test_spindle_p8.sh
src/pru/dts/: pickup-winder-p8-steppers.dts
src/pru/include/: pru_ipc.h  pru_ramp.h  pru_regs.h  pru_rsc_table.h  pru_stepper.h  pru_throttle.h  pru_tmcuart.h
src/pru/motor_control/: main.c
src/pru/orchestrator/: main.c
src/pru/pru0_motor_control/: .config  main.c
src/pru/pru0_spindle/: main.c
src/pru/pru1_dual_stepper/: main.c
src/pru/pru1_lateral/: main.c
src/pru/pru1_orchestration/: main.c
src/pru/scripts/: load_pru.sh  pickupwinder-pru.service  pru_spin_test.py
src/pru/test_gpio/: main.c
src/pru/test_iep_simple/: main.c
src/pru/test_spindle/: main.c
src/pru/test_static/: main.c
src/python/: command_controller.py  command_registry.py  config.py  daemon.py  encoder.py  geometry.py  ipc.py  lateral_pru.py  pattern.py  pickup_test.py  pot.py  pru_client.py  recipe_store.py  session_controller.py  stepper_pru.py  web_interface.py  winder_app.py  winderapp.py
test/gpio_p9_23/: test_gpio_p9_23.py
test/test_eqep/: BB-EQEP-EXAMPLE-00A0.dtbo  Makefile  README.md  bone_eqep2b.dts  eqep_example.dts  read_eqep.py
test/test_winding_geometry/: test_main.cpp
tools/: docker-build.sh
tools/ws-client/: README.md  py_ws_client.py
(+2 files in other folders)
